Finish data import functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,6 +92,7 @@
         <div class="nav">
             <a href="/goal">Set Goal</a>
             <a href="/log">Log Weight</a>
+            <a href="/import">Import</a>
             <a href="/api/weight-data">API Data</a>
         </div>
 
